# glfwogltest2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Collision.cpp  ConfigManager.cpp  ConfigManager.h  CubeObject.cpp  CubeObject.h  DirLight.cpp  DirLight.h  FileMesh.cpp  Flashlight.cpp  GLBuffer.cpp  GameObject.cpp  GameObject.h  InputManager.cpp  LICENSE  Light.cpp  Light.h  LuaScript.cpp  LuaScript.h  Mesh.cpp  Mesh.h  MeshBase.cpp  MeshManager.cpp  MeshManager.hpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PointLight.cpp  PointLight.h  PostProcess.cpp  ProceduralMesh.cpp  README.md  RenderableObject.cpp  ShaderManager.cpp  ShaderProgram.cpp  (+15 more)
.kdev4/: glfwogltest2.kdev4
data/: cube.fbx  cube_irreg.fbx  floor.fbx  skeletontest1.dae  skeletontest2.dae  skeletontest4.dae
glad/: glad.c  glad.h
glfwogltest2/: Camera.cpp  Camera.h  CubeObject.cpp  CubeObject.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  Makefile  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PointLight.h  RenderObject.cpp  RenderObject.h  ShaderProgram.cpp  ShaderProgram.h  TextureManager.cpp  TextureManager.h  build.sh  glfwogltest2.vcxproj  glfwogltest2.vcxproj.filters  main.cpp
glfwogltest2/data/: cube.txt
glfwogltest2/shaders/: frag1.glsl  frag_cube.glsl  frag_light.glsl  vert1.glsl  vert_cube.glsl  vert_light.glsl
include/: Camera.h  Camera.hpp  CameraBase.hpp  Collision.h  ConfigManager.h  ConfigManager.hpp  CubeObject.h  CubeObject.hpp  DirLight.h  DirLight.hpp  FileMesh.hpp  Flashlight.h  Flashlight.hpp  GLBuffer.hpp  GLVersion.hpp  GameObject.h  GameObject.hpp  InputManager.h  InputManager.hpp  Light.h  Light.hpp  Mesh.h  Mesh.hpp  MeshBase.cpp  MeshBase.h  MeshBase.hpp  MeshData.hpp  MeshManager.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  PointLight.h  PointLight.hpp  PostProcess.h  PostProcess.hpp  ProceduralMesh.h  ProceduralMesh.hpp  ProceduralMeshData.hpp  RenderableObject.h  RenderableObject.hpp  ShaderManager.h  (+15 more)
lua_cpp_bind/: CMakeLists.txt  LuaScript.cpp  LuaScript.h  LuaScriptSet.cpp  LuaScriptSet.h  LuaValue.h
lua_cpp_bind/include/: LuaFunction.h
shaders/: frag_cube.glsl  frag_fsq.glsl  frag_light.glsl  frag_postprocess_passthrough.glsl  frag_postprocess_sobel.glsl  vert_cube.glsl  vert_fsq.glsl  vert_light.glsl  vert_postprocess.glsl
